# ProjectBOT

./: .gitignore  CMakeLists.txt
IGNCore/: CMakeLists.txt  EventService.cpp  EventService.h  Slave.cpp  Slave.h  buddylist.cpp  buddylist.h  main.cpp  packet.h  plugin.h
IGNCore/lookup/: LookupService.cpp  LookupService.h  server_packet.cpp  server_packet.h
Plugins/: CMakeLists.txt
